# anker-solix-prom-exporter

./: .env.dist  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  exporter.py  pyproject.toml
.docker/: prometheus.yaml
src/anker_solix_prom_exporter/: exporter.py  util.py
tests/: test_exporter.py  test_exporter_unittest.py
