[project]
name = "anker-solix-prom-exporter"
version = "0.1.0"
description = "A prometheus exporter for anker solix"
authors = [
    {name = "Ole Rößner",email = "o.roessner@neusta.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "anker-solix-api @ git+https://github.com/thomluther/anker-solix-api.git@v3.1.1",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "cryptography (>=45.0.6,<46.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
